GNOME Bugzilla – Bug 744025
CRITICAL **: load_failed_cb: assertion '(error->domain == WEBKIT_NETWORK_ERROR) || (error->domain == WEBKIT_POLICY_ERROR) || (error->domain == WEBKIT_PLUGIN_ERROR)' failed
Last modified: 2015-02-05 14:22:39 UTC
What should we do about this error: CRITICAL **: load_failed_cb: assertion '(error->domain == WEBKIT_NETWORK_ERROR) || (error->domain == WEBKIT_POLICY_ERROR) || (error->domain == WEBKIT_PLUGIN_ERROR)' failed This is because in ephy-web-view.c, load_failed_cb, we expect the error domain of the returned GError to be SOUP_HTTP_ERROR, or one of those three WebKit error domains. Now visit this broken site (with TLS version intolerance): https://www.timewarnercable.com/ You get a G_TLS_ERROR. I think the assertion is in Ephy wrong because WebKitWebView:load-failed is not documented to have any restrictions on the errors it returns.
Created attachment 296166 [details] [review] Show a network error page when a G_TLS_ERROR is received We don't expect a G_TLS_ERROR here, so we hit the g_return_val_if_fail and wind up displaying a blank page with the error message in plain text. We should display the network error page instead.
Review of attachment 296166 [details] [review]: Yes. Thanks!
Attachment 296166 [details] pushed as 7a9d5fb - Show a network error page when a G_TLS_ERROR is received