Show a network error page when a G_TLS_ERROR is received

We don't expect a G_TLS_ERROR here, so we hit the g_return_val_if_fail
and wind up displaying a blank page with the error message in plain
text. We should display the network error page instead.

https://bugzilla.gnome.org/show_bug.cgi?id=744025